Implement exec endpoint
